# multisig

./: .dockerignore  .gitignore  .lintstagedrc  .oxfmtrc.json  .prettierignore  README.md  agents.md  dev.sh  docker-compose.yml  fly.multisig-app.toml  fly.multisig-server.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.txt  ralph-once.sh  ralph.sh
.husky/: pre-commit
context/: consultation.md  effect-Context.md  effect-Layer.md  effect-Pipe.md  effect-Platform.md  effect-Queue.md  effect-Rpc.md  effect-Schema.md  effect-atom.md  radix-Gateway.md  radix-GatewayRustSdk.md  radix-Sbor.md  radix-radix-dapp-toolkit.md  radix-transactions.md  tanstack-Router.md
create-account-cli/: Cargo.toml
create-account-cli/src/: main.rs  manifest.rs
docs/: community-governance-requests.md  consultation-dapp-v2-proposal.md  foundation-transition-context.md  issues.md  multisig-architecture.md  multisig-orchestrator-prd.md  radix-subintents-reference.md  uniswap-governance-reference.md
docs/plans/: 2026-01-15-governance-architecture-design.md  2026-01-16-multisig-orchestrator-poc-design.md  2026-01-16-multisig-orchestrator-poc-impl.md  2026-01-28-consultation-v2-product-scope.md  2026-02-23-issue-1-scaffolding-access-rule.md
generate-fee-payer-cli/: Cargo.toml
generate-fee-payer-cli/src/: main.rs
multisig-app/: .oxlintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
multisig-app/server/api/: well-known-radix-json.ts
multisig-app/src/: custom-elements.d.ts  routeTree.gen.ts  router.tsx  styles.css
multisig-app/src/atom/: accessRuleAtom.ts  gatewayAtoms.ts  handleSignAtom.ts  makeRuntimeAtom.ts  orchestratorClient.ts  previewAtom.ts  proposalAtoms.ts
multisig-app/src/components/: back-link.tsx  section-card.tsx  status-badge.tsx
multisig-app/src/components/ui/: badge.tsx  button.tsx  progress.tsx
multisig-app/src/lib/: ClientOnly.tsx  dappToolkit.ts  envVars.ts  epochTime.ts  manifest.ts
multisig-app/src/routes/: __root.tsx  create-account.tsx  edit-access-rule.tsx  index.tsx
multisig-poc/: Cargo.toml
multisig-poc/src/: accounts.rs  gateway.rs  keys.rs  lib.rs  main.rs  subintent.rs  transaction.rs
multisig-server/: .env.example  Cargo.toml  Dockerfile
multisig-server/migrations/: 001_initial.sql  002_proposals.sql  003_signatures.sql  004_submission_attempts.sql  005_validity_monitoring.sql  006_proposer_timestamps.sql  007_multisig_account.sql
multisig-server/src/: gateway.rs  main.rs  manifest_analyzer.rs  proposal_store.rs  signature_collector.rs  transaction_builder.rs  validity_monitor.rs
(+2 files in other folders)
