[package]
name = "generate-fee-payer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
radix-transactions = "1.3"
radix-common = "1.3"
radix-engine-interface = "1.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8"
hex = "0.4"
inquire = "0.7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
