[package]
name = "multisig-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
radix-transactions = "1.3"
radix-common = "1.3"
radix-engine-interface = "1.3"

# HTTP client for Gateway API
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Hex encoding
hex = "0.4"

[[bin]]
name = "generate_keys"
path = "src/bin/generate_keys.rs"
